--- a/src/RouteSelector.module.css
+++ b/src/RouteSelector.module.css
@@ -1,7 +1,8 @@
 .Container {
   grid-area: sidebar;
   display: flex;
-  overflow-y: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .Sidebar {
